[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { package = "ratatui" }
confy = "0.3.1"
serde_derive = "1.0.163"
crossterm = "0.25"
serde = { version = "1.0.163", features = ["derive"] }
unicode-width = "0.1.5"
reqwest = {version = "0.11.18", features = ["blocking"]}
